kubernetes/apps/super-productivity/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: super-productivity
  namespace: super-productivity
spec:
  ports:
  - port: 80
    targetPort: http
    protocol: TCP
    name: http
  selector:
    app: super-productivity
