kubernetes/apps/super-productivity/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: super-productivity
  namespace: super-productivity
spec:
  parentRefs:
  - name: traefik-gateway
    namespace: traefik
    kind: Gateway
  hostnames:
  - sp.snyderhomelab.com
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: super-productivity
      port: 80
